--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,10 @@ classifiers = [
 description = "A GPU-accelerated physics engine for robotics simulation"
 readme = "README.md"
 requires-python = ">=3.10"
-dependencies = ["warp-lang>=1.7.0.dev20250823"]
+dependencies = [
+    "dotenv>=0.9.9",
+    "warp-lang>=1.7.0.dev20250823",
+]
 
 [project.optional-dependencies]
 # Core simulation dependencies
